# piherder

./: .dockerignore  .env.example  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Caddyfile.dev  Dockerfile  Dockerfile.nmap  LICENSE  README.md  SECURITY.md  SPEC.md  THEMING_VARIABLES.md  UI_UNIFICATION_PLAN.md  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.lock.txt  requirements.runtime.lock.txt  sitemap.xml  tailwind.config.js
.github/workflows/: docs.yml  e2e.yml  release.yml  test.yml
account-security/pwa-push/: index.html
account-security/roles/: index.html
account-security/two-factor/: index.html
account-security/users/: index.html
app/: __init__.py  celery_app.py  config.py  database.py  db_migrate.py  main.py  models.py  tasks.py  templates.py  version_info.py
app/routers/: about.py  api_v1.py  audit.py  auth.py  auth_users.py  certificates.py  dns.py  fleet_services.py  (+24 more)
certs/: .piherder-cert-fp  README.md
developers/: index.html
docs/: ADMIN.md  API.md  DECISION_IOS_PUSH.md  DECISION_PLAN_STABILISATION.md  FEATURE_PLAN_HOME_ASSISTANT.md  FEATURE_PLAN_HOST_LIFECYCLE.md  FEATURE_PLAN_IAM_2FA_UPDATES_NOTIFICATIONS.md  FEATURE_PLAN_INTEGRATIONS.md  FEATURE_PLAN_LAN_NMAP.md  FEATURE_PLAN_PIHOLE_NPM_CERTS.md  FEATURE_PLAN_PWA_PUSH_NOTIFICATIONS.md  FEATURE_PLAN_RUNTIME_TOPOLOGY.md  FEATURE_PLAN_TEMPLATES.md  PLAN_v0.4.0.md  PLAN_v0.5.0.md  PLAN_v0.6.0.md  PLAN_v0.7.0.md  PLAN_v0.8.0.md  PLAN_v0.9.0.md  PUBLISH_IMAGE.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.7.0.md  RELEASE_v0.8.0.md  ROADMAP_ECOSYSTEM.md
e2e/: README.md  __init__.py  conftest.py  helpers.py  test_add_server_wizard.py  test_nmap_lan.py  test_rbac_viewer.py  test_shell_login.py  test_shell_nav.py
getting-started/: index.html
migrations/: env.py
scripts/: cleanup-piherder-user.sh  e2e-down.sh  e2e-up.sh  generate_brand_assets.py  refresh-lockfiles.sh  vendor_cdns.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_api_tokens.py  test_app_settings.py  test_app_update.py  test_apply_schedules.py  test_audit_format.py  test_audit_format_branches.py  test_backup_paths.py  test_backup_restore.py  test_backup_server_lock.py  test_backup_status_helpers.py  test_certificates.py  test_certificates_deep.py  test_compose_graph.py  test_compose_sets.py  test_container_annotations.py  test_container_patching_summary.py  test_cors_policy.py  test_coverage_rc3_pure.py  test_coverage_v09_poll_certs_registry.py  test_coverage_v09_pure.py  test_dns_fabric.py  test_dns_fabric_core_coverage.py  test_dns_fabric_pure.py  test_docker_inventory.py  test_docker_multifile.py  test_docker_redeploy.py  test_docker_stack_lifecycle.py  test_docker_unused_html.py  test_encryption.py  test_env_file_ui.py  test_from_host_extra_files.py  test_haos.py  test_herder_backup.py  test_host_deps.py  test_http_seeded_surfaces.py  test_http_smoke.py  test_integration_bindings.py  test_integration_registry_pure.py  test_integrations_grafana.py  (+40 more)
troubleshooting/: index.html
wiki/: README.md  index.md
(+316 files in other folders)
