[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piherder"
version = "0.2.0"
description = "PiHerder – Secure fleet management for Raspberry Pi clusters (backups, patching, control) with zero plaintext secrets."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  { name = "Bjorn Gluck", email = "bjorn@example.com" }
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.0",
    "cryptography>=42.0",
    "paramiko>=3.4",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pycron>=3.0",
    "pyyaml>=6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "pywebpush>=2.0",
    "uptime-kuma-api>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/bjorngluck/piherder"
Repository = "https://github.com/bjorngluck/piherder"
Issues = "https://github.com/bjorngluck/piherder/issues"
